@@ -165,8 +165,6 @@ rule token = parse
 	| "<<=" { mk lexbuf (Binop (OpAssignOp OpShl)) }
 (*//| ">>=" { mk lexbuf (Binop (OpAssignOp OpShr)) } *)
 (*//| ">>>=" { mk lexbuf (Binop (OpAssignOp OpUShr)) } *)
-	| "===" { mk lexbuf (Binop OpPhysEq) }
-	| "!==" { mk lexbuf (Binop OpPhysNotEq) }
 	| "==" { mk lexbuf (Binop OpEq) }
 	| "!=" { mk lexbuf (Binop OpNotEq) }
 	| "<=" { mk lexbuf (Binop OpLte) }
