@@ -1,0 +1,9 @@
+package unit;
+
+class MySubClass extends MyClass {
+
+	public override function get() {
+		return val * 2;
+	}
+
+}
